<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mintCream"
    android:scrollbars="vertical"
    tools:context=".activityDailyResults.DailyResultsView">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:background="@color/russianViolet"
        android:text="@string/backBtnTitle"
        android:textColor="@color/mintCream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/changeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_change"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="365dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24897401" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75239396" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/changeNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeNo"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeTitle"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/dailyAvgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_avg_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNo"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/dailyAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dailyAvgNo"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyAvgTitle"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/dailyAvgChangeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_avg_change_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyAvg"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/changeNo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeNo2"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyAvgChangeTitle"
        app:layout_constraintVertical_bias="0.048" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/dailyChart"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNo3"
        app:layout_constraintVertical_bias="0.79" />

    <Spinner
        android:id="@+id/chartSpinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="380dp" />

</androidx.constraintlayout.widget.ConstraintLayout>